# BananaBang

./: .gitignore
BadEngine/: CMakeLists.txt  skrrrrrrrrypt.sh
BadEngine/cmake/: global_settings.cmake
BadEngine/lib/: AbilityManager.h  AnimateBody.h  AudioManager.h  AudioSource.h  Axis.h  BoundingBox.h  Camera.h  CapsuleCollider.h  Collider.h  CollisionManager.h  Component.h  Constraints.h  Enemy.h  EnemyStateManager.h  Frustum.h  GameMode.h  GameObject.h  Globals.h  GraphNode.h  Input.h  Mesh.h  Model.h  PBD.h  Particle.h  ParticleSystem.h  Pathfinder.h  PlayerMovement.h  ResourceLoader.h  RigidBody.h  Scene.h  SceneManager.h  Section.h  SectorSelector.h  Serialize.h  Shader.h  SoundBuffer.h  SoundDevice.h  SoundSource.h  TimeManager.h  Transform.h  (+2 more)
BadEngine/lib/Animation/: Animator.h  AssimpGLMHelpers.h  ModelAnimation.h
BadEngine/lib/animation/: Animation.h  Animator.h  Bone.h  MeshAnimation.h
BadEngine/res/: Sphere.mtl  Sphere1.mtl  low_plane.mtl  player.mtl  tree.mtl  wall.mtl
BadEngine/res/Shaders/: hud.frag
BadEngine/res/animations/: Crouched Walking.fbx
BadEngine/res/objects/: box.mtl  capsule.mtl  plane.mtl
BadEngine/res/objects/trees/: tree.mtl  tree2.mtl  tree3.mtl  tree_log_l1.mtl
BadEngine/res/shaders/: PlayerHit.frag  PlayerHit.vert  diffuse.frag  diffuseInstanced.vert  f_maps.frag  fs (2).frag  fsS.frag  fs_outline.frag  ground.frag  ground.vert  outline_animation.frag  outline_animation.vert  particle.frag  particle.vert  phong.frag  ramp.frag  vs.vert  vsS.vert  vsTree.vert  vs_animation.vert  vs_outline.vert
BadEngine/saves/: first.yaml
BadEngine/src/: AnimateBody.cpp  AudioManager.cpp  AudioSource.cpp  Axis.cpp  BadEngine.cpp  CMakeLists.txt  Camera.cpp  Component.cpp  GameObject.cpp  Globals.cpp  Input.cpp  RigidBody.cpp  Scene.cpp  SceneManager.cpp  SoundBuffer.cpp  SoundDevice.cpp  SoundSource.cpp  Transform.cpp  UI.cpp  fs.frag  fsS.frag  vs.vert  vsS.vert
BadEngine/src/lib/: AnimateBody.cpp  AnimateBody.h  Axis.cpp  Camera.cpp  Camera.h  Component.cpp  GameObject.cpp  GameObject.h  Input.cpp  RigidBody.cpp  Scene.cpp  Scene.h  SceneManager.cpp  Transform.cpp  UI.cpp  UI.h
BadEngine/src/shaders/: depthAnimationShader.vert  depthInstanceShader.vert  enemy.vert  font.frag  fsS.frag  fsTree.frag  fs_animation.frag  fs_filling.frag  fs_outline.frag  ground.frag  hud.vert  outline_animation.vert  phong.frag  phong.vert  phonginstanced.vert  ramp.frag  ramp.vert  ssao.fs  ssao_lighting.fs  vsTree.vert  vs_filling.vert  vs_player.vert
